# kubevoip

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: integration.yaml  release.yaml  test.yaml
charts/: README.md
charts/kubevoip/: Chart.yaml  values.yaml
charts/kubevoip/crds/: asterisk-crd.yaml  platform-crds.yaml
charts/kubevoip/templates/: _helpers.tpl  deployment.yaml  peering.yaml  rbac.yaml  serviceaccount.yaml
config/crd/: asterisk-crd.yaml  platform-crds.yaml
database/: alembic.ini  env.py
database/migrations/: 001-kamailio-subscriber.sql  002-runtime-routing.sql
database/versions/: 0001_runtime_schema.py  0002_voicemail_odbc.py  0003_voicemail_realtime_uniqueid.py  0004_voicemail_message_id.py  0005_kamailio_mwi_presence.py
docs/: migration-v0.2.md  migration-v0.3.md  migration-v0.4.md  networking.md  observability.md
examples/: asterisk-demo.yaml  namespace.yaml  platform.yaml  quickstart-two-phones.yaml  secret-alice-sip.yaml
integration/: Dockerfile.sipp  platform.yaml  sipp-echo.xml  sipp-outbound-provider-call.xml  sipp-phone.xml  sipp-platform-echo.xml  sipp-provider-digest.xml  sipp-register-phone.xml  sipp-register.xml  sipp-trunk-call.xml
kubevoip/: __init__.py  config.py  controller.py  database.py  k8s.py  main.py  models.py  platform_controller.py  platform_render.py  platform_resources.py  render.py  resources.py  status.py
kubevoip/templates/: extensions.conf.j2  kamailio.cfg.j2  pjsip.conf.j2  rtp.conf.j2
kubevoip/templates/asterisk/: extconfig.conf.j2  extensions.conf.j2  logger.conf.j2  odbc.ini.j2  pjsip.conf.j2  res_odbc.conf.j2  rtp.conf.j2  voicemail.conf.j2
scripts/: check-versions.sh  export-docs-reference.py  generate-platform-crds.py  migrate-api-group.py  migrate-api-group.sh
tests/: test_controller.py  test_database.py  test_docs_export.py  test_manifests.py  test_migration.py  test_models.py  test_platform_controller.py  test_platform_models.py  test_platform_render.py  test_platform_resources.py  test_render.py  test_resources.py  test_status.py
