[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubevoip"
version = "0.6.7"
description = "A Kubernetes operator for scalable SIP platforms."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "jinja2>=3.1.0",
  "kopf>=1.37.0",
  "kubernetes>=30.0.0",
  "pydantic>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
  "bump-my-version>=1.4.0",
  "pyyaml>=6.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 200
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.hatch.build.targets.wheel]
packages = ["kubevoip"]

[tool.hatch.build.targets.wheel.force-include]
"database" = "database"

[tool.bumpversion]
current_version = "0.6.7"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
message = "Release v{new_version}"
tag_name = "v{new_version}"
tag_message = "KubeVoIP v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "kubevoip/__init__.py"

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = "uv.lock"
